# Some_Nets

./: .gitignore  README.md
Lewis_Van_Winkle/1_Adapter_Addres/: CMakeLists.txt  main.c
Lewis_Van_Winkle/start_up/: CMakeLists.txt  main.c
NetWidget/: CMakeLists.txt  ServTCP.cpp  ServTCP.h  SocketTCP.cpp  SocketTCP.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
NetWidget/LeftDockWidget/: leftDock.qml  qmldir
Skel/: CMakeLists.txt  ERROR_func.c  READ_N_func.c  TCP_client_skel.c  TCP_serv_skel.c  UDP_client_skel.c  UDP_serv_skel.c  error_func.c  fucn_SET_ADDRESS.c  func_SET_ADDRESS.c  func_TCP_CLIENT.c  func_TCP_SERVER.c  func_UDP_CLIENT.c  func_UDP_SERVER.c  set_address_func.c  skel_defines.h  tcp_functions.c  upd_functions.c
Stevens/DateTime/: CMakeLists.txt  client.c  include.h  main.c  server.c  startWithCmake.sh
