cmake_minimum_required(VERSION 3.5)
set(PROJECT_NAME NetWidget)
project(${PROJECT_NAME} VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Core)
find_package(Qt6 REQUIRED COMPONENTS
    Qml
    Quick
    QuickWidgets
)

qt_standard_project_setup()

set(PROJECT_SOURCES
        main.cpp
        mainwindow.cpp
	mainwindow.h
	ServTCP.cpp
	ServTCP.h
	SocketTCP.h
	SocketTCP.cpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(NetWidget
	MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
	res.qrc
	#leftDock.qml
    )

set(QML_MOD_NAME "appNetWidget")
message(STATUS "QML_MOD_NAME = ${QML_MOD_NAME}")



# Define target properties for Android with Qt 6 as:
#    set_property(TARGET NetWidget APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
	add_library(${PROJECT_NAME} SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
	add_executable(${PROJECT_NAME}
            ${PROJECT_SOURCES}
        )
    endif()
endif()

#set_source_files_properties(leftDock.qml PROPERTIES
#    QT_RESOURCE_ALIAS MyFrame.qml
#)

qt_add_qml_module(${PROJECT_NAME}
   URI AppNetWidget
   VERSION 1.0
   #typeinfo leftDock.qml
   TYPEINFO
	leftDock
   QML_FILES
	LeftDockWidget/leftDock.qml
   #SOURCES
#	mainwindow.h mainwindow.cpp
)


target_link_libraries(NetWidget PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt6::Quick Qt6::QuickWidgets Qt6::Core Qt6::Qml)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.NetWidget)
endif()

set_target_properties(NetWidget PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS NetWidget
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(NetWidget)
endif()
